# demo_syft_grype

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt  main.cpp
